segunda version de la aplicacion

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="color4">#D81B60</color>
     <color name="cafe">#5F2412</color>
     <color name="gris">#918F8F</color>
+    <color name="naranja">#FF5722</color>
 </resources>
