--- a/app/src/main/res/layout/activity_registro_conductor.xml
+++ b/app/src/main/res/layout/activity_registro_conductor.xml
@@ -32,12 +32,20 @@
                     android:layout_gravity="center_horizontal"
                     android:textColor="#000000"
                     />
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/boton_redondo"
+                    android:src="@drawable/driver"
+                    />
+                <!--
                 <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:background="@drawable/driver"
                     android:layout_gravity="center"
-                    />
+                    />-->
             </LinearLayout>
 
 
