Agregue InicioConductor, Pasajero y Propietario tambien ya funcionan los botones de tipo de usuario, ya muestra los formularios

--- a/app/src/main/res/layout/activity_login__form.xml
+++ b/app/src/main/res/layout/activity_login__form.xml
@@ -51,6 +51,7 @@
 
 
                 <EditText
+                    android:id="@+id/correoElectronico"
                     style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                     android:layout_width="369dp"
                     android:layout_height="wrap_content"
@@ -80,7 +81,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Aceptar"
-                android:paddingBottom="25dp"/>
+                android:paddingBottom="25dp"
+                android:onClick="aceptar"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
