--- a/app/src/main/res/layout/activity_tipo_cuenta.xml
+++ b/app/src/main/res/layout/activity_tipo_cuenta.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Pasajero"
+            android:onClick="registroPasajero"
             />
 
         <Button
@@ -43,6 +44,7 @@
            android:id="@+id/tipoPropietario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="registroPropietario"
             android:text="Propietario"/>
     </LinearLayout>
 
