--- a/app/src/main/res/layout/activity_registro_conductor.xml
+++ b/app/src/main/res/layout/activity_registro_conductor.xml
@@ -143,6 +143,7 @@
                             android:layout_marginLeft="-200dp"
                             android:layout_width="180dp"
                             android:entries="@array/conductores"
+                            android:id="@+id/spnJefeConductor"
                             />
 
                     </TableRow>
@@ -160,6 +161,7 @@
                             android:outlineAmbientShadowColor="@color/gris"
 
                             android:foreground="?attr/selectableItemBackgroundBorderless"
+                            android:onClick="RegistrarmeConductor"
                             />
                     </TableRow>
                    <!-- <TableRow android:gravity="center_horizontal"
