--- a/app/src/main/res/layout/activity_login__form.xml
+++ b/app/src/main/res/layout/activity_login__form.xml
@@ -12,16 +12,24 @@
         android:layout_height="170dp"
         android:id="@+id/header"
         android:orientation="vertical"
-        android:background="@drawable/header">
+        android:background="@drawable/flogin">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="-10dp"
+            android:src="@drawable/logoavisa"/>
  <TextView
      android:layout_width="match_parent"
-     android:layout_height="match_parent"
+     android:layout_height="60dp"
      android:gravity="center"
-     android:text="Bienvenido"
+     android:text="Bienvenid@"
      android:textStyle="bold"
      android:textSize="45dp"
+     android:layout_marginTop="-60dp"
      android:fontFamily="cursive"
-     android:textColor="@color/colorWhite"/>
+     android:textColor="#000000"/>
+
 
     </LinearLayout>
 
