--- a/app/src/main/res/layout/activity_registro_pasajero.xml
+++ b/app/src/main/res/layout/activity_registro_pasajero.xml
@@ -36,8 +36,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/boton_redondo"
-                    android:src="@drawable/man2"
+                    android:src="@drawable/student"
                     />
 
             </LinearLayout>
