--- a/app/src/main/res/layout/activity_agregar_unidades.xml
+++ b/app/src/main/res/layout/activity_agregar_unidades.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RegistroDueno"
+    tools:context=".RegistroPropietario"
     android:padding="20dp"
     android:background="@drawable/header">
 
