--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,11 @@
     <color name="cafe">#5F2412</color>
     <color name="gris">#918F8F</color>
     <color name="naranja">#FF5722</color>
+    <color name="colorBackground">#fcfcfc</color>
+    <color name="colorLightGrayLine">#EDEDED</color>
+    <color name="colorDeepPurple">#7C4DFF</color>
+    <color name="colorMaterialYellow">#FFB300</color>
+    <color name="colorMaterialGreen">#00bfa5</color>
+    <color name="colorPinkAccent">#ff4081</color>
+    <color name="colorRed">#D82721</color>
 </resources>
